@@ -2,6 +2,12 @@
 # Some generic MIPS tests
 #
 
+# "LOSE" marks information about tests which fail at a particular point
+# in time, but which are not XFAILed.  Either they used to pass
+# and indicate either regressions or the need to tweak the tests to keep
+# up the with code, or they are new tests and it is unknown whether or not
+# they should pass as-is for the given object formats.
+
 proc run_list_test { name opts } {
     global srcdir subdir
     set testname "MIPS $name"
@@ -40,11 +46,17 @@ if { [istarget mips*-*-*] } then {
     run_dump_test "and"
     run_dump_test "break20"
     run_dump_test "trap20"
+
+    # LOSE: As of 2002-02-08, "beq" through "bltu" fail for target mips-ecoff.
+    # See http://sources.redhat.com/ml/binutils/2001-10/msg00418.html for
+    # more information.  Not sure if the fixes there are correct; should
+    # branches to external labels be allowed for ECOFF?
     run_dump_test "beq"
     run_dump_test "bge"
     run_dump_test "bgeu"
     run_dump_test "blt"
     run_dump_test "bltu"
+
     if !$ilocks { run_dump_test "div" } else { run_dump_test "div-ilocks" }
     run_dump_test "dli"
     if $elf {
@@ -54,10 +66,16 @@ if { [istarget mips*-*-*] } then {
     }
     if $elf { run_dump_test "jal-svr4pic" }
     if $elf { run_dump_test "jal-xgot" }
+    # LOSE: As of 2002-02-08, the jal-empic test fails for target mips-ecoff.
+    # It appears that it broke between 2000-03-11 00:00UTC and
+    # 2000-03-12 00:00 UTC.
     if $ecoff { run_dump_test "jal-empic" }
     if !$aout { run_dump_test "la" }
     if $elf { run_dump_test "la-svr4pic" }
     if $elf { run_dump_test "la-xgot" }
+    # LOSE: As of 2002-02-08, the la-empic test fails for target mips-ecoff.
+    # Not sure when it first cropped up, but may be related to addition of
+    # "la" -> "addiu" pattern in MIPS opcode table long ago.
     if $ecoff { run_dump_test "la-empic" }
     if !$aout { run_dump_test "lb" }
     if $elf { run_dump_test "lb-svr4pic" }
@@ -86,6 +104,9 @@ if { [istarget mips*-*-*] } then {
     if !$aout { run_dump_test "lifloat" }
     if $elf { run_dump_test "lif-svr4pic" }
     if $elf { run_dump_test "lif-xgot" }
+    # LOSE: As of 2002-02-08, the lif-empic test fails for target mips-ecoff.
+    # It appears that it broke between 2000-03-11 00:00UTC and
+    # 2000-03-12 00:00 UTC.
     if $ecoff { run_dump_test "lif-empic" }
     run_dump_test "mips4"
     if !$ilocks { run_dump_test "mul" } else { run_dump_test "mul-ilocks" }
@@ -126,6 +147,9 @@ if { [istarget mips*-*-*] } then {
 
     run_list_test "illegal" ""
 
+    # LOSE: As of 2002-02-08, the next 4 tests fail for target mips-ecoff.
+    # It's unknown whether they _should_ pass as-is, or whether different
+    # variants are needed for ELF and ECOFF.
     run_dump_test "mips-gp32-fp32"
     run_dump_test "mips-gp32-fp64"
     run_dump_test "mips-gp64-fp32"
